--- a/roles/flameshot/tasks/main.yml
+++ b/roles/flameshot/tasks/main.yml
@@ -2,26 +2,26 @@
 - name: run package helper
   import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
-    package_apt_list:
+    package_apt_facts:
       install:
         - 'flameshot'
 
 - name: run copy helper
   import_tasks: '{{ helpers }}/copy.yml'
   vars:
-    copy_list:
+    copy_facts:
       - src: 'flameshot.ini'
         dest: '{{ user_config }}/Dharkael'
 
 - name: disable defautl shortcuts
   import_tasks: '{{ helpers }}/dconf.yml'
   vars:
-    dconf_list: '{{ flameshot_settings }}'
+    dconf_facts: '{{ flameshot_settings }}'
 
 - name: run shortcut helper
   import_tasks: '{{ helpers }}/shortcut.yml'
   vars:
-    shortcut_list:
+    shortcut_facts:
       - name: "'flameshot'"
         command: "'flameshot full -p {{ user_home }}/Pictures'"
         binding: "['Print']"
