--- a/helpers/git_repo.yml
+++ b/helpers/git_repo.yml
@@ -1,7 +1,7 @@
 ---
-- name: add git repository
+- name: helper | git_repo | add git repository
   git:
     force: yes
     repo: '{{ item.repo }}'
     dest: '{{ item.dest }}'
-  loop: '{{ git_repo_list }}'
+  loop: '{{ git_repo_facts }}'
