--- a/helpers/link.yml
+++ b/helpers/link.yml
@@ -1,9 +1,9 @@
 ---
-- name: create link
+- name: helper | link | create link
   file:
     src: '{{ item.src }}'
     dest: '{{ item.dest }}'
     follow: no
     force: yes
     state: link
-  loop: '{{ link_list }}'
+  loop: '{{ link_facts }}'
