--- a/roles/albert/tasks/main.yml
+++ b/roles/albert/tasks/main.yml
@@ -2,27 +2,27 @@
 - name: run key helper
   import_tasks: '{{ helpers }}/key.yml'
   vars:
-    key_list:
+    key_facts:
       - 'https://download.opensuse.org/repositories/home:manuelschneid3r/xUbuntu_18.04/Release.key'
 
 - name: run repo helper
   import_tasks: '{{ helpers }}/repo.yml'
   vars:
-    repo_list:
+    repo_facts:
       - repo: 'deb https://download.opensuse.org/repositories/home:/manuelschneid3r/xUbuntu_18.04/ /'
         filename: 'home:manuelschneid3r'
 
 - name: run package helper
   import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
-    package_apt_list:
+    package_apt_facts:
       install:
         - 'albert'
 
 - name: run template helper
   import_tasks: '{{ helpers }}/template.yml'
   vars:
-    template_list:
+    template_facts:
       - src: 'albert.conf'
         dest: '{{ user_config }}/albert'
       - src: '.albertignore'
@@ -37,6 +37,6 @@
 - name: run startup helper
   import_tasks: '{{ helpers }}/startup.yml'
   vars:
-    startup_list:
+    startup_facts:
       name: 'albert'
       delay: 0
