--- a/roles/audacity/tasks/main.yml
+++ b/roles/audacity/tasks/main.yml
@@ -2,19 +2,19 @@
 - name: run repo helper
   import_tasks: '{{ helpers }}/repo.yml'
   vars:
-    repo_list:
+    repo_facts:
       - repo: 'ppa:ubuntuhandbook1/audacity'
 
 - name: run package helper
   import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
-    package_apt_list:
+    package_apt_facts:
       install:
         - 'audacity'
 
 - name: run copy helper
   import_tasks: '{{ helpers }}/copy.yml'
   vars:
-    copy_list:
+    copy_facts:
       - src: 'audacity.cfg'
         dest: '{{ user_home }}/.audacity-data'
