--- a/roles/bin/tasks/main.yml
+++ b/roles/bin/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: run package helper
   import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
-    package_apt_list:
+    package_apt_facts:
       install:
         - 'ffmpeg'
         - 'libvips42'
@@ -10,13 +10,13 @@
 - name: run package helper
   import_tasks: '{{ helpers }}/package_pip.yml'
   vars:
-    package_pip_list:
+    package_pip_facts:
       install:
         - 'pyvips'
 
 - name: run link helper
   import_tasks: '{{ helpers }}/link.yml'
   vars:
-    link_list:
+    link_facts:
       - src: '{{ dotfiles_roles }}/bin/files/bin'
         dest: '{{ user_home }}/bin'
