--- a/roles/copyq/tasks/main.yml
+++ b/roles/copyq/tasks/main.yml
@@ -2,26 +2,26 @@
 - name: run repo helper
   import_tasks: '{{ helpers }}/repo.yml'
   vars:
-    repo_list:
+    repo_facts:
       - repo: 'ppa:hluk/copyq'
 
 - name: run package helper
   import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
-    package_apt_list:
+    package_apt_facts:
       install:
         - 'copyq'
 
 - name: run template helper
   import_tasks: '{{ helpers }}/template.yml'
   vars:
-    template_list:
+    template_facts:
       - src: 'copyq.conf'
         dest: '{{ user_config }}/copyq'
 
 - name: run startup helper
   import_tasks: '{{ helpers }}/startup.yml'
   vars:
-    startup_list:
+    startup_facts:
       name: 'copyq'
       delay: 40
