--- a/roles/font/tasks/main.yml
+++ b/roles/font/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: run package helper
   import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
-    package_apt_list:
+    package_apt_facts:
       install:
         - 'fonts-hack'
         - 'fonts-roboto-hinted'
@@ -16,7 +16,7 @@
 
     - import_tasks: '{{ helpers }}/dir_create.yml'
       vars:
-        dir_create_data: |
+        dir_create_facts: |
           {{
             q('items', font_list)
             | map('basename')
