--- a/roles/gpg/tasks/main.yml
+++ b/roles/gpg/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: run copy helper
   import_tasks: '{{ helpers }}/copy.yml'
   vars:
-    copy_list:
+    copy_facts:
       - src: 'gpg-agent.conf'
         dest: '{{ user_home }}/.gnupg'
       - src: 'gpg.conf'
