--- a/roles/keepassxc/tasks/main.yml
+++ b/roles/keepassxc/tasks/main.yml
@@ -2,19 +2,19 @@
 - name: run repo helper
   import_tasks: '{{ helpers }}/repo.yml'
   vars:
-    repo_list:
+    repo_facts:
       - repo: 'ppa:phoerious/keepassxc'
 
 - name: run package helper
   import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
-    package_apt_list:
+    package_apt_facts:
       install:
         - 'keepassxc'
 
 - name: run template helper
   import_tasks: '{{ helpers }}/template.yml'
   vars:
-    template_list:
+    template_facts:
       - src: 'keepassxc.ini'
         dest: '{{ user_config }}/keepassxc'
