--- a/roles/mintupdate/tasks/main.yml
+++ b/roles/mintupdate/tasks/main.yml
@@ -2,4 +2,4 @@
 - name: run dconf helper
   import_tasks: '{{ helpers }}/dconf.yml'
   vars:
-    dconf_list: '{{ mintupdate_settings }}'
+    dconf_facts: '{{ mintupdate_settings }}'
