--- a/roles/redshift/tasks/main.yml
+++ b/roles/redshift/tasks/main.yml
@@ -2,13 +2,13 @@
 - name: run package helper
   import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
-    package_apt_list:
+    package_apt_facts:
       install:
         - 'redshift-gtk'
 
 - name: run startup helper
   import_tasks: '{{ helpers }}/startup.yml'
   vars:
-    startup_list:
+    startup_facts:
       name: 'redshift-gtk'
       delay: 40
