--- a/roles/youtube_dl/tasks/main.yml
+++ b/roles/youtube_dl/tasks/main.yml
@@ -2,14 +2,14 @@
 - name: run package helper
   import_tasks: '{{ helpers }}/package_pip.yml'
   vars:
-    package_pip_list:
+    package_pip_facts:
       install:
         - 'youtube-dl'
 
 - name: run copy helper
   import_tasks: '{{ helpers }}/copy.yml'
   vars:
-    copy_list:
+    copy_facts:
       - src: 'config'
         dest: '{{ user_config }}/youtube-dl'
 
