helper_startup: remove unnecessary path & easytag: add dconf helper

--- a/roles/easytag/tasks/main.yml
+++ b/roles/easytag/tasks/main.yml
@@ -6,9 +6,7 @@
       install:
         - 'easytag'
 
-- name: change settings
-  dconf:
-    key: '{{ item.key }}'
-    value: '{{ item.value | default(''""'') }}'
-    state: '{{ item.state | default("present") }}'
-  loop: '{{ easytag_settings }}'
+- name: run dconf helper
+  import_tasks: '{{ helpers }}/dconf.yml'
+  vars:
+    dconf_facts: '{{ easytag_settings }}'
