--- a/helpers/startup.yml
+++ b/helpers/startup.yml
@@ -14,6 +14,6 @@
 
 - name: helper | startup | create file and content
   copy:
-    content: "{{ lookup('template', helpers ~ '/templates/startup') }}"
+    content: "{{ lookup('template', 'startup') }}"
     dest: '{{ entry_path }}'
   when: entry_path is not file
