helper_tempfile: refactor registered variable & rsnapshot: add variable instead of hardcoded string & add ansible_managed comment & vars_files: delete redundant variable

--- a/helpers/alias.yml
+++ b/helpers/alias.yml
@@ -11,6 +11,7 @@
 
 - name: helper | alias | add text block to file
   blockinfile:
-    marker: '# {mark} role: {{ role_name }}'
+    marker: '# role: {{ role_name }} {mark}'
+    marker_end: 'END\n'
     path: '{{ alias_path }}'
     block: "{{ lookup('template', role_path ~ '/templates/alias.sh') }}"
