--- a/vars.yml
+++ b/vars.yml
@@ -1,13 +1,11 @@
-# ansible_connection: local
-# ansible_python_interpreter: '{{ ansible_playbook_python }}'
-dotfiles_directory: '{{ user_home }}/dotfiles'
-# dotfiles_roles: '{{ dotfiles_directory }}/roles'
-# git_protocol: 'git@github.com:in-in/dotfiles.git'
-helpers: '{{ dotfiles_directory }}/helpers'
-# storage_ext_id: '12f3d18b-ce5f-4548-bf4e-4b1d1ca46f10'
-# storage_ext: '{{ user_home }}/storage_ext'
-# sync_directory: '{{ user_storage }}/sync'
-# ubuntu_codename: 'bionic'
-# user_config: '{{ user_home }}/.config'
+---
+dotfiles_roles: '{{ playbook_dir }}/roles'
+git_protocol: 'git@github.com:in-in/dotfiles.git'
+helpers: '{{ playbook_dir }}/helpers'
+storage_ext_id: '12f3d18b-ce5f-4548-bf4e-4b1d1ca46f10'
+storage_ext: '{{ user_home }}/storage_ext'
+sync_directory: '{{ user_storage }}/sync'
+ubuntu_codename: 'bionic'
+user_config: '{{ user_home }}/.config'
 user_home: '{{ "$HOME" | expandvars }}'
-# user_storage: '/media/{{ ansible_user_id }}/storage'
+user_storage: '/media/{{ ansible_user_id }}/storage'
