--- a/helpers/tempfile.yml
+++ b/helpers/tempfile.yml
@@ -3,4 +3,8 @@
   tempfile:
     state: directory
     suffix: '{{ tempfile_suffix }}'
-  register: helper_tempfile_result
+  register: tempfile_result
+
+- name: helper | tempfile | get directory path
+  set_fact:
+    helper_tempfile_result: '{{ tempfile_result.path }}'
