--- a/roles/cinnamon/tasks/applet.yml
+++ b/roles/cinnamon/tasks/applet.yml
@@ -7,12 +7,12 @@
 - name: applet | add repository
   git:
     repo: 'https://github.com/linuxmint/cinnamon-spices-applets.git'
-    dest: '{{ helper_tempfile_result.path }}'
+    dest: '{{ helper_tempfile_result }}'
 
 - name: applet | run stat helper
   import_tasks: '{{ helpers }}/stat.yml'
   vars:
-    path: '{{ helper_tempfile_result.path ~ "/" ~ item | default(None) }}'
+    path: '{{ helper_tempfile_result ~ "/" ~ item | default(None) }}'
     data: '{{ cinnamon_applets }}'
 
 - name: applet | install
