--- a/helpers/gitignore.yml
+++ b/helpers/gitignore.yml
@@ -2,6 +2,7 @@
 - name: helper | gitignore | add text block to the file
   blockinfile:
     create: yes
-    marker: '# {mark} role: {{ role_name }}'
+    marker: "# role: {{ role_name }} {mark}"
+    marker_end: 'END\n'
     path: '{{ playbook_dir }}/.gitignore'
     block: '{{ gitignore_facts }}'
