--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -12,6 +12,7 @@
     template_facts:
       - src: '.zshrc'
         dest: '{{ user_home }}'
+  tags: 'zshrc'
 
 - name: set zsh as the default shell
   become: yes
