--- a/helpers/alias.yml
+++ b/helpers/alias.yml
@@ -11,7 +11,7 @@
 
 - name: helper | alias | add text block to file
   blockinfile:
-    marker: '# role: {{ role_name }} {mark}'
-    marker_end: 'END\n'
+    marker: '# {mark}'
+    marker_begin: "{{ ('role: ' ~ role_name | upper) | center | replace(' ', '_') }}"
     path: '{{ alias_path }}'
-    block: "{{ lookup('template', role_path ~ '/templates/alias.sh') }}"
+    block: "{{ lookup('template', 'alias.sh') }}"
