--- a/roles/git/defaults/main.yml
+++ b/roles/git/defaults/main.yml
@@ -5,6 +5,12 @@ git_config_data:
   - name: user.name
     value: '{{ git_user_name }}'
   - name: remote.origin.url
-    value: '{{ git_protocol }}'
+    value: |
+      {% set git_remote_origin = lookup('pipe', 'git remote get-url origin') %}
+      {% if 'https://' in git_remote_origin %}
+        {{ git_remote_origin | replace('https://', 'git@') | replace('/', ':', 1) }}
+      {% else %}
+        {{ git_remote_origin }}
+      {% endif %}
     scope: local
     repo: '{{ playbook_dir }}'
