font: add until loop and remove one redundant task

--- a/roles/font/tasks/main.yml
+++ b/roles/font/tasks/main.yml
@@ -7,28 +7,26 @@
         - 'fonts-hack'
         - 'fonts-roboto-hinted'
 
-- name: recreate directory
-  block:
-    - name: remove directory
-      file:
-        path: '{{ font_dir }}'
-        state: absent
-
-    - import_tasks: '{{ helpers }}/dir_create.yml'
-      vars:
-        dir_create_facts: |
-          {{
-            q('items', font_list)
-            | map('basename')
-            | map('splitext')
-            | map('first')
-            | map('regex_replace', '^', font_dir ~ '/')
-            | list
-          }}
+- name: run dir_create helper
+  import_tasks: '{{ helpers }}/dir_create.yml'
+  vars:
+    dir_create_facts: |
+      {{
+        q('items', font_list)
+        | map('basename')
+        | map('splitext')
+        | map('first')
+        | map('regex_replace', '^', font_dir ~ '/')
+        | list
+      }}
 
 - name: download and unarchive files
   unarchive:
     src: '{{ item }}'
     dest: '{{ font_dir }}/{{ (item | basename | splitext)[0] }}'
     remote_src: yes
+  register: unarchive_result
+  until: unarchive_result.failed == false
+  retries: 10
+  delay: 10
   loop: '{{ font_list }}'
