--- a/roles/gnome_terminal/defaults/main.yml
+++ b/roles/gnome_terminal/defaults/main.yml
@@ -1,2 +1,30 @@
 ---
 gnome_terminal_default_theme: 'gruvbox dark'
+
+gnome_terminal_prebuilt_theme:
+  - key: '/org/gnome/terminal/legacy/profiles:/:{{ item.name | to_uuid }}/default-size-columns'
+    value: '100'
+  - key: '/org/gnome/terminal/legacy/profiles:/:{{ item.name | to_uuid }}/default-size-rows'
+    value: '28'
+  - key: '/org/gnome/terminal/legacy/profiles:/:{{ item.name | to_uuid }}/audible-bell'
+    value: 'false'
+  - key: '/org/gnome/terminal/legacy/profiles:/:{{ item.name | to_uuid }}/use-theme-colors'
+    value: 'false'
+  - key: '/org/gnome/terminal/legacy/profiles:/:{{ item.name | to_uuid }}/use-transparent-background'
+    value: 'false'
+  - key: '/org/gnome/terminal/legacy/profiles:/:{{ item.name | to_uuid }}/use-theme-transparency'
+    value: 'false'
+  - key: '/org/gnome/terminal/legacy/profiles:/:{{ item.name | to_uuid }}/use-system-font'
+    value: 'false'
+  - key: '/org/gnome/terminal/legacy/profiles:/:{{ item.name | to_uuid }}/font'
+    value: "'Iosevka Term SS08 13'"
+  - key: '/org/gnome/terminal/legacy/profiles:/:{{ item.name | to_uuid }}/bold-color-same-as-fg'
+    value: 'true'
+  - key: '/org/gnome/terminal/legacy/profiles:/:{{ item.name | to_uuid }}/visible-name'
+    value: "'{{ item.name }}'"
+  - key: '/org/gnome/terminal/legacy/profiles:/:{{ item.name | to_uuid }}/background-color'
+    value: "'{{ item.background_color }}'"
+  - key: '/org/gnome/terminal/legacy/profiles:/:{{ item.name | to_uuid }}/foreground-color'
+    value: "'{{ item.foreground_color }}'"
+  - key: '/org/gnome/terminal/legacy/profiles:/:{{ item.name | to_uuid }}/palette'
+    value: '{{ item.colors }}'
