add tags and move task variables away from the templates

--- a/roles/keepassxc/tasks/main.yml
+++ b/roles/keepassxc/tasks/main.yml
@@ -18,3 +18,6 @@
     template_facts:
       - src: 'keepassxc.ini'
         dest: '{{ user_config }}/keepassxc'
+        data:
+          filename: 'psst.kdbx'
+  tags: 'keepassxc_template'
