--- a/roles/keepassxc/templates/keepassxc.ini
+++ b/roles/keepassxc/templates/keepassxc.ini
@@ -1,4 +1,3 @@
-{%- set filename = "psst.kdbx" -%}
 [General]
 AutoReloadOnChange=true
 AutoSaveAfterEveryChange=false
@@ -11,7 +10,7 @@ BackupBeforeSave=false
 GlobalAutoTypeKey=0
 GlobalAutoTypeModifiers=0
 IgnoreGroupExpansion=true
-LastDatabases={{ sync_directory }}/{{ filename }}
+LastDatabases={{ sync_directory }}/{{ data.filename }}
 LastDir={{ sync_directory }}
 MinimizeOnCopy=false
 OpenPreviousDatabasesOnStartup=true
