--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -25,3 +25,4 @@
     - name: git config | without vault password
       debug:
         msg: 'Create your own git config yourself'
+  tags: 'git_config'
