--- a/roles/vscode/templates/settings.json
+++ b/roles/vscode/templates/settings.json
@@ -20,6 +20,8 @@
   "editor.occurrencesHighlight": false,
   "editor.renderLineHighlight": "gutter",
   "editor.renderWhitespace": "all",
+  "editor.suggest.localityBonus": true,
+  "editor.tabCompletion": "on",
   "editor.tabSize": 2,
   "editor.wordWrap": "on",
   "explorer.confirmDelete": false,
@@ -40,18 +42,9 @@
   "terminal.integrated.drawBoldTextInBrightColors": false,
   "terminal.integrated.fontFamily": "Iosevka Term SS08, monospace",
   "terminal.integrated.fontSize": 16,
-  "todohighlight.include": [
-    "**/*.css",
-    "**/*.html",
-    "**/*.js",
-    "**/*.ts",
-    "**/*.tsx",
-    "**/*.yml"
-  ],
   "update.channel": "none",
   "update.enableWindowsBackgroundUpdates": false,
   "update.showReleaseNotes": false,
-  "vsicons.dontShowNewVersionMessage": true,
   "window.menuBarVisibility": "toggle",
   "window.title": "${dirty}${activeEditorShort}${separator}${rootName}",
   "window.titleBarStyle": "custom",
@@ -59,7 +52,6 @@
   "workbench.colorTheme": "Dracula Soft",
   "workbench.editor.showTabs": false,
   "workbench.enableExperiments": false,
-  "workbench.iconTheme": "vscode-icons",
   "workbench.settings.editor": "json",
   "workbench.sideBar.location": "right",
   "workbench.startupEditor": "none",
