--- a/roles/vscode/tasks/main.yml
+++ b/roles/vscode/tasks/main.yml
@@ -45,6 +45,8 @@
     mime_facts:
       entry_name: 'code'
       type:
+        - 'application/javascript'
+        - 'application/json'
         - 'application/xml'
         - 'text/markdown'
         - 'text/x-python'
