--- a/roles/vscode/tasks/main.yml
+++ b/roles/vscode/tasks/main.yml
@@ -37,7 +37,7 @@
         dest: '{{ user_config }}/Code/User'
       - src: 'settings.json'
         dest: '{{ user_config }}/Code/User'
-  tags: "vscode_template"
+  tags: 'vscode_template'
 
 - name: run mime helper
   import_tasks: '{{ helpers }}/mime.yml'
@@ -55,23 +55,11 @@
   import_tasks: '{{ helpers }}/alias.yml'
   tags: 'vscode_alias'
 
-- name: reinstall extensions
-  block:
-    - name: uninstall extensions
-      command: 'code --uninstall-extension {{ item }}'
-      register: uninstall_result
-      changed_when: uninstall_result.stdout | regex_search("(was successfully uninstalled)")
-      loop: '{{ vscode_extensions }}'
-  rescue:
-    - name: extensions failed
-      debug:
-        msg: '{{ uninstall_result.results | to_nice_json }}'
-  always:
-    - name: install extensions
-      command: 'code --install-extension {{ item }}'
-      register: install_result
-      changed_when: not install_result.stdout | regex_search("(is already installed)")
-      until: install_result.failed == false
-      retries: 10
-      delay: 10
-      loop: '{{ vscode_extensions }}'
+- name: install extensions
+  command: 'code --install-extension {{ item }} --force'
+  register: install_result
+  changed_when: install_result.stdout | regex_search('was successfully installed')
+  until: install_result.failed == false
+  retries: 10
+  delay: 10
+  loop: '{{ vscode_extensions }}'
